* deque 替换stack